--- a/CQRSE/CQRSE.csproj
+++ b/CQRSE/CQRSE.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{C8530369-3A5D-4FAC-A13E-8740BB260F2C}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>HelloCQRS</RootNamespace>
-    <AssemblyName>HelloCQRS</AssemblyName>
+    <RootNamespace>CQRSE</RootNamespace>
+    <AssemblyName>CQRSE</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
